<resources>
    <string name="app_name">Home Inventory</string>
    <string name="error_validation">Neispravni podaci</string>
    <string name="error_invalid_credentials">Pogrešan email ili lozinka</string>
    <string name="error_token_expired">Sesija je istekla. Prijavite se ponovo.</string>
    <string name="error_token_invalid">Sesija nije važeća. Prijavite se ponovo.</string>
    <string name="error_account_deactivated">Vaš nalog je deaktiviran. Obratite se administratoru.</string>
    <string name="error_forbidden">Nemate dozvolu za ovu akciju.</string>
    <string name="error_not_found">Traženi podatak ne postoji.</string>
    <string name="error_email_already_exists">Nalog sa ovom email adresom već postoji.</string>
    <string name="error_category_name_taken">Kategorija sa ovim nazivom već postoji.</string>
    <string name="error_location_name_taken">Lokacija sa ovim nazivom već postoji.</string>
    <string name="error_category_in_use">Kategorija se koristi kod %1$d predmeta i ne može se obrisati.</string>
    <string name="error_location_in_use">Lokacija se koristi kod %1$d predmeta i ne može se obrisati.</string>
    <string name="error_cannot_deactivate_self">Ne možete deaktivirati sopstveni nalog.</string>
    <string name="error_sync_conflict">Podatak je izmenjen na drugom uređaju.</string>
    <string name="error_wrong_current_password">Trenutna lozinka nije tačna.</string>
    <string name="error_internal">Došlo je do greške. Pokušajte ponovo.</string>
    <string name="error_no_network">Nema internet konekcije. Prikazani su poslednji sačuvani podaci.</string>
    <string name="error_server_unavailable">Server trenutno nije dostupan.</string>
    <string name="error_currency_unavailable">Kurs trenutno nije dostupan.</string>
    <string name="error_unknown">Došlo je do greške. Pokušajte ponovo.</string>
    <string name="action_back">Nazad</string>
    <string name="error_vr_name">Ime mora imati najmanje 2 znaka</string>
    <string name="error_vr_email">Unesite ispravnu email adresu</string>
    <string name="error_vr_password">Lozinka mora imati najmanje 8 znakova</string>
    <string name="error_vr_confirm_password">Lozinke se ne poklapaju</string>
    <string name="auth_login_title">Prijava</string>
    <string name="auth_register_title">Registracija</string>
    <string name="auth_label_name">Ime</string>
    <string name="auth_label_email">Email</string>
    <string name="auth_label_password">Lozinka</string>
    <string name="auth_label_confirm_password">Potvrda lozinke</string>
    <string name="auth_action_login">Prijavi se</string>
    <string name="auth_action_register">Registruj se</string>
    <string name="auth_go_to_register">Nemate nalog? Registrujte se</string>
    <string name="auth_go_to_login">Već imate nalog? Prijavite se</string>
    <string name="nav_dashboard">Pregled</string>
    <string name="nav_inventory">Inventar</string>
    <string name="nav_statistics">Statistika</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_locations">Lokacije</string>
    <string name="nav_add_edit_item">Dodavanje predmeta</string>
    <string name="nav_item_details">Detalji predmeta</string>
    <string name="nav_admin_dashboard">Administracija</string>
    <string name="nav_admin_users">Korisnici</string>
    <string name="nav_admin_categories">Kategorije</string>
    <string name="profile_role_user">Korisnik</string>
    <string name="profile_role_admin">Administrator</string>
    <string name="profile_action_logout">Odjavi se</string>
    <string name="profile_logout_dialog_title">Odjava</string>
    <string name="profile_logout_dialog_message">Da li ste sigurni da želite da se odjavite? Svi lokalno sačuvani podaci biće obrisani sa uređaja.</string>
    <string name="profile_logout_dialog_confirm">Odjavi se</string>
    <string name="profile_logout_dialog_cancel">Otkaži</string>
    <string name="profile_label_currency">Valuta prikaza</string>
    <string name="profile_label_warranty_threshold">Prag za upozorenje o garanciji</string>
    <string name="warranty_threshold_days_format">%d dana</string>
    <string name="profile_label_theme">Tema</string>
    <string name="theme_option_system">Sistemska</string>
    <string name="theme_option_light">Svetla</string>
    <string name="theme_option_dark">Tamna</string>
    <string name="dashboard_total_items_label">Ukupno predmeta</string>
    <string name="dashboard_total_value_label">Ukupna vrednost</string>
    <string name="dashboard_unconverted_note">Neki predmeti su u drugoj valuti i nisu uračunati u ukupnu vrednost.</string>
    <string name="dashboard_category_breakdown_title">Predmeti po kategorijama</string>
    <string name="dashboard_recent_items_title">Poslednje dodato</string>
    <string name="dashboard_recent_subtitle">%1$s • %2$s</string>
    <string name="dashboard_empty_title">Inventar je prazan</string>
    <string name="dashboard_empty_message">Još uvek nemate dodatih predmeta. Dodajte prvi predmet da biste videli pregled stanja.</string>
    <string name="dashboard_empty_action">Idi u inventar</string>
    <string name="dashboard_error_retry_action">Pokušaj ponovo</string>
    <string name="dashboard_warranty_warnings_title">Upozorenja o garanciji</string>
    <string name="dashboard_warranty_warning">Garancija za %1$s ističe za %2$d dana</string>
    <string name="statistics_total_items_label">Ukupno predmeta</string>
    <string name="statistics_total_value_label">Ukupna vrednost</string>
    <string name="statistics_category_count_label">Kategorija u upotrebi</string>
    <string name="statistics_average_value_label">Prosečna vrednost</string>
    <string name="statistics_unconverted_row">Kurs za %1$s trenutno nije dostupan — %2$s nije uračunato u zbir.</string>
    <string name="statistics_value_by_category_title">Vrednost po kategorijama</string>
    <string name="statistics_count_by_category_title">Broj predmeta po kategorijama</string>
    <string name="statistics_value_trend_title">Vrednost inventara kroz vreme</string>
    <string name="statistics_category_table_title">Pregled po kategorijama</string>
    <string name="statistics_table_header_category">Kategorija</string>
    <string name="statistics_table_header_count">Broj</string>
    <string name="statistics_table_header_value">Vrednost</string>
    <string name="statistics_most_expensive_title">Najskuplji predmet</string>
    <string name="statistics_most_expensive_item">%1$s — %2$s — %3$s</string>
    <string name="statistics_most_expensive_none">Nema predmeta koji se može prikazati u valuti prikaza.</string>
    <string name="statistics_warranty_breakdown_title">Raspodela po statusu garancije</string>
    <string name="statistics_empty_title">Nema podataka za statistiku</string>
    <string name="statistics_empty_message">Još uvek nemate dodatih predmeta. Dodajte prvi predmet da biste videli statistiku.</string>
    <string name="inventory_item_subtitle">%1$s • %2$s</string>
    <string name="inventory_empty_title">Inventar je prazan</string>
    <string name="inventory_empty_message">Još uvek nemate dodatih predmeta. Dodajte prvi da počnete da vodite evidenciju.</string>
    <string name="inventory_empty_action">Dodaj predmet</string>
    <string name="inventory_error_retry_action">Pokušaj ponovo</string>
    <string name="inventory_item_saved_confirmation">Predmet je sačuvan.</string>
    <string name="inventory_item_pending_sync_description">Čeka sinhronizaciju</string>
    <string name="inventory_search_hint">Pretraži naziv, proizvođača, model, serijski broj, kategoriju ili lokaciju</string>
    <string name="inventory_search_empty_message">Nema rezultata za \"%1$s\". Pokušajte drugačiji pojam.</string>
    <string name="inventory_filter_button_description">Filteri i sortiranje</string>
    <string name="inventory_filter_title">Filteri i sortiranje</string>
    <string name="inventory_filter_sort_title">Sortiraj po</string>
    <string name="inventory_sort_name_asc">Naziv A-Z</string>
    <string name="inventory_sort_name_desc">Naziv Z-A</string>
    <string name="inventory_sort_price_asc">Cena rastuće</string>
    <string name="inventory_sort_price_desc">Cena opadajuće</string>
    <string name="inventory_sort_newest">Najnovije dodato</string>
    <string name="inventory_sort_oldest">Najstarije dodato</string>
    <string name="inventory_filter_category_title">Kategorija</string>
    <string name="inventory_filter_location_title">Lokacija</string>
    <string name="inventory_filter_price_title">Raspon cene</string>
    <string name="inventory_filter_price_from">Od (%1$s)</string>
    <string name="inventory_filter_price_to">Do (%1$s)</string>
    <string name="inventory_filter_purchase_year">Godina kupovine</string>
    <string name="inventory_filter_under_warranty">Samo pod garancijom</string>
    <string name="inventory_filter_warranty_expiring_soon">Garancija uskoro ističe</string>
    <string name="inventory_filter_reset">Poništi sve filtere</string>
    <string name="inventory_filter_done">Gotovo</string>
    <string name="inventory_filter_empty_message">Nijedan predmet ne odgovara izabranim filterima.</string>
    <string name="error_vr_item_name">Naziv mora imati najmanje 2 znaka</string>
    <string name="error_vr_item_category">Izaberite kategoriju</string>
    <string name="error_vr_item_location">Izaberite lokaciju</string>
    <string name="error_vr_item_quantity">Količina mora biti najmanje 1</string>
    <string name="error_vr_item_purchase_price">Cena ne može biti negativna</string>
    <string name="error_vr_item_estimated_value">Vrednost ne može biti negativna</string>
    <string name="error_vr_item_currency">Nepodržana valuta</string>
    <string name="error_vr_item_purchase_date">Datum kupovine ne može biti u budućnosti</string>
    <string name="error_vr_item_warranty_date">Datum garancije ne može biti pre datuma kupovine</string>
    <string name="error_vr_item_text_100">Tekst je predugačak</string>
    <string name="error_vr_item_text_1000">Tekst je predugačak</string>
    <string name="additem_title_add">Dodavanje predmeta</string>
    <string name="additem_title_edit">Izmena predmeta</string>
    <string name="additem_label_name">Naziv</string>
    <string name="additem_label_category">Kategorija</string>
    <string name="additem_label_location">Lokacija</string>
    <string name="additem_section_more">Dodatni podaci</string>
    <string name="additem_label_description">Opis</string>
    <string name="additem_label_manufacturer">Proizvođač</string>
    <string name="additem_label_model">Model</string>
    <string name="additem_label_serial_number">Serijski broj</string>
    <string name="additem_label_quantity">Količina</string>
    <string name="additem_label_purchase_price">Nabavna cena</string>
    <string name="additem_label_estimated_value">Procenjena vrednost</string>
    <string name="additem_label_currency">Valuta</string>
    <string name="additem_label_purchase_date">Datum kupovine</string>
    <string name="additem_label_warranty_expiration_date">Datum isteka garancije</string>
    <string name="additem_label_seller">Prodavac</string>
    <string name="additem_label_notes">Beleške</string>
    <string name="additem_action_save">Sačuvaj</string>
    <string name="additem_discard_dialog_title">Odbaciti izmene?</string>
    <string name="additem_discard_dialog_message">Imate nesačuvane izmene. Ako izađete sada, biće izgubljene.</string>
    <string name="additem_discard_dialog_confirm">Odbaci</string>
    <string name="additem_discard_dialog_cancel">Nastavi uređivanje</string>
    <string name="additem_label_photo">Fotografija</string>
    <string name="additem_photo_chooser_title">Dodaj fotografiju</string>
    <string name="additem_photo_chooser_camera">Kamera</string>
    <string name="additem_photo_chooser_gallery">Galerija</string>
</resources>